fixed blog menu icon clipping

--- a/sites/all/themes/ds/css/style.css
+++ b/sites/all/themes/ds/css/style.css
@@ -2324,6 +2324,7 @@ div[role=main] {
   color: #222222;
   font-size: 11px;
   padding-top: 9px;
+  padding-bottom: 4px;
 }
 #blog-menu ul li .active {
   background: url('images/blog-menu-active-arrow.png') no-repeat;
