--- a/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
+++ b/sites/all/themes/ds/sass/partials/07-layout-design/_design.sass
@@ -329,6 +329,7 @@ div[role=main]
         color: $gray-dark
         font-size: 11px
         padding-top: 9px
+        padding-bottom: 4px
       .active
         background: image_url("blog-menu-active-arrow.png") no-repeat
         background-position: top 0px
